Fix text step alignment

--- a/src/stylesheets/modules/modern_stack_onboarding/index.styl
+++ b/src/stylesheets/modules/modern_stack_onboarding/index.styl
@@ -319,7 +319,7 @@
     &-text
       font-size: 18px
       font-weight: 600
-      margin-top: 25px
+      margin-top: 40px
 
   &--deployment-form
     max-width: 900px
